--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
         <label for="lastName">Last Name</label>
         <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required>
       </div>
-      <button type="submit" class="btn btn-primary btn-block">Login</button>
+      <div class="submit-button">
+        <button type="submit" class="btn btn-primary btn-block">Login</button>
+      </div>
     </form>
   </div>
 </div>
