--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="login-container">
     <h2>Login</h2>
-    <form>
+    <form (submit)="validateLogin()">
       <div class="form-group">
         <label for="firstName">First Name</label>
-        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required>
+        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" (ngModel)="firstNameValue" required>
       </div>
       <div class="form-group">
         <label for="lastName">Last Name</label>
-        <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" required>
+        <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" (ngModel)="lastNameValue" required>
       </div>
       <div class="submit-button">
         <button type="submit" class="btn btn-primary btn-block">Login</button>
