--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
     <form (submit)="validateLogin()">
       <div class="form-group">
         <label for="firstName">First Name</label>
-        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" (ngModel)="firstNameValue" required>
+        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your first name" [(ngModel)]="firstNameValue" required>
       </div>
       <div class="form-group">
         <label for="lastName">Last Name</label>
-        <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" (ngModel)="lastNameValue" required>
+        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter your last name" [(ngModel)]="lastNameValue" required>
       </div>
       <div class="submit-button">
         <button type="submit" class="btn btn-primary btn-block">Login</button>
