--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,24 @@
-<h1>Test</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="container">
+        <div class="row">
+          <div *ngFor="let user of users">
+            <div class="card" style="width: 20rem">
+              <div class="card-body">
+                <h5 class="card-title">{{ user.firstName + " " + user.lastName }}</h5>
+                <p class="card-text">Email: {{ user.email }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div>
+</div>
