--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="login-container">
-    <h2>Login</h2>
+<div class="card">
+  <div class="card-body">
+    <h2 class="card-title">Login</h2>
     <form (submit)="validateLogin()">
       <div class="form-group">
         <label for="firstName">First Name</label>
@@ -16,4 +16,3 @@
     </form>
   </div>
 </div>
-
