--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,3 +1,12 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="./chat">Chat application</a>
+    <div class="navbar-nav ms-auto">
+      <a class="nav-item nav-link" href="#">{{ currentUser }}</a>
+      <a class="nav-item nav-link" href="#">Loggged at {{ }}</a>
+      <a class="nav-item nav-link" href="#">Pricing</a>
+    </div>
+</nav>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
