--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="./chat">Chat application</a>
     <div class="navbar-nav ms-auto">
       <a class="nav-item nav-link" href="#">{{ currentUser }}</a>
-      <a class="nav-item nav-link" href="#">Loggged at {{ }}</a>
+      <a class="nav-item nav-link" href="#">Loggged at </a>
       <a class="nav-item nav-link" href="#">Pricing</a>
     </div>
 </nav>
