--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -38,7 +38,7 @@
             <br>IP Address: {{ userDetails['ip'] }}
             <br>Country: {{ userCountry }}
             <br>City: {{ userDetails['city'] }} 
-            <br>Gender: {{ userDetails['gender'] }}</p>
+            <br>Gender: {{ userGender }}</p>
             <a href="#" class="btn btn-danger" (click)="closeUserDetails()">Close</a>
         </div>
       </div>
