--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -39,7 +39,7 @@
             <br>Country: {{ userCountry }}
             <br>City: {{ userDetails['city'] }} 
             <br>Gender: {{ userGender }}</p>
-            <a href="#" class="btn btn-danger" (click)="closeUserDetails()">Close</a>
+            <a class="btn btn-danger" (click)="closeUserDetails()">Close</a>
         </div>
       </div>
       
