--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,23 @@
-<div class="center-card">
-  <div class="card" style="width: 40rem">
+
+<div>
+  <div id="logincard" class="card mx-auto" style="width: 40rem">
     <div class="card-body">
-      <h2 class="card-title">Login</h2>
-      <form (submit)="validateLogin()">
-        <div class="form-group">
-          <label for="firstName">First Name</label>
-          <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your first name" [(ngModel)]="firstNameValue" required>
-        </div>
-        <div class="form-group">
-          <label for="lastName">Last Name</label>
-          <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter your last name" [(ngModel)]="lastNameValue" required>
-        </div>
-        <div class="submit-button">
-          <button type="submit" class="btn btn-primary btn-block">Login</button>
-        </div>
-      </form>
+      <div class="text-center">
+        <h4 class="card-title">Login Form</h4>
+        <form (ngSubmit)="validateLogin()">
+          <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your first name" [(ngModel)]="firstNameValue" required>
+          </div>
+          <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter your last name" [(ngModel)]="lastNameValue" required>
+          </div>
+          <div class="submit-button">
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
