--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="./chat">Chat application</a>
+  <div class="navbar-nav mr-auto">
+    <a class="nav-item nav-link" href="#">Clicks: {{ clickCount }}</a>
+  </div>
   <div class="navbar-nav ms-auto">
     <a class="nav-item nav-link" href="#">{{ currentUser }}</a>
     <a class="nav-item nav-link" href="#">Loggged at {{ userLoginTime }}</a>
