--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -18,20 +18,11 @@
           <div *ngFor="let user of users">
             <div class="card" style="width: 20rem" (click)="interact(user)">
               <div class="card-body">
-                <h5 class="card-title">
-                  {{ user.firstName + ' ' + user.lastName }}
-                </h5>
+                <h5 class="card-title">{{ user.firstName + ' ' + user.lastName }}</h5>
                 <p class="card-text">Email: {{ user.email }}</p>
                 <div class="inreraction-buttons" *ngIf="!user.interaction">
-                  <button
-                    class="btn btn-primary"
-                    (click)="showUserDetails(user)"
-                  >
-                    Show Detail
-                  </button>
-                  <button class="btn btn-success chat-button">
-                    Start chat
-                  </button>
+                  <button class="btn btn-primary" (click)="showUserDetails(user)">Show Detail</button>
+                  <button class="btn btn-success chat-button" (click)="handleChat()">Start chat</button>
                 </div>
               </div>
             </div>
@@ -41,29 +32,32 @@
     </div>
     <div class="col">
       <div class="card" style="width: 25rem;" *ngIf="userDetails.length !== 0">
-        <img
-          class="card-img-top"
-          src="{{ userDetails['image'] }}"
-          alt="Card image cap"
-        />
+        <img class="card-img-top" src="{{ userDetails['image'] }}" alt="Card image cap"/>
         <div class="card-body">
-          <h5 class="card-title">
-            {{ userDetails['firstName'] + ' ' + userDetails['lastName'] }}
-          </h5>
-          <h6 class="card-subtitle mb-2 text-muted">
-            Birthdate: {{ userDetails['birthDate'] }}
-          </h6>
+          <h5 class="card-title">{{ userDetails['firstName'] + ' ' + userDetails['lastName'] }}</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Birthdate: {{ userDetails['birthDate'] }}</h6>
           <p class="card-text">
-            Eye color: {{ userDetails['eyeColor'] }} <br />University:
-            {{ userDetails['university'] }} <br />MAC Address:
-            {{ userDetails['macAddress'] }} <br />IP Address:
-            {{ userDetails['ip'] }} <br />Country: {{ userCountry }} <br />City:
-            {{ userDetails['city'] }} <br />Gender: {{ userGender.charAt(0).toUpperCase() + userGender.slice(1) }}
+            Eye color: {{ userDetails['eyeColor'] }}<br/>
+            University: {{ userDetails['university'] }}<br/>
+            MAC Address: {{ userDetails['macAddress'] }}<br/>
+            IP Address: {{ userDetails['ip'] }}<br/>
+            Country: {{ userCountry }}<br/>
+            City:{{ userDetails['city'] }}<br/>
+            Gender: {{ userGender.charAt(0).toUpperCase() + userGender.slice(1) }}
           </p>
           <a class="btn btn-danger" (click)="closeUserDetails()">Close</a>
         </div>
       </div>
     </div>
-    <div class="col"></div>
+    <div class="col">
+      <div class="card" style="width: 30rem;" *ngIf="userChatting">
+        <div class="card-body">
+          <h5 class="card-title">Chat with username</h5>
+          <p class="card-text">
+            
+          </p>
+          <a class="btn btn-danger" (click)="handleChat()">Close</a>
+        </div>
+    </div>
   </div>
 </div>
