--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -22,7 +22,7 @@
                 <p class="card-text">Email: {{ user.email }}</p>
                 <div class="inreraction-buttons" *ngIf="!user.interaction">
                   <button class="btn btn-primary" (click)="showUserDetails(user)">Show Detail</button>
-                  <button class="btn btn-success chat-button" (click)="handleChat()">Start chat</button>
+                  <button class="btn btn-success chat-button" (click)="openChat(user)">Start chat</button>
                 </div>
               </div>
             </div>
@@ -50,13 +50,18 @@
       </div>
     </div>
     <div class="col">
-      <div class="card" style="width: 30rem;" *ngIf="userChatting">
+      <div class="card" style="width: 30rem;" *ngIf="userChatting.length !== 0">
         <div class="card-body">
-          <h5 class="card-title">Chat with username</h5>
+          <h5 class="card-title">Chat with {{ userChatting['firstName'] + ' ' + userChatting['lastName'] }}</h5>
+          <div class="form-group">
+            <label for="newmessage">New message</label>
+            <input type="text" class="form-control" id="newmessage" name="newmessage" placeholder="Type your message here."><br>
+            <button type="submit" class="btn btn-primary btn-block">Send the message</button>
+          </div>
           <p class="card-text">
-            
           </p>
-          <a class="btn btn-danger" (click)="handleChat()">Close</a>
+
+          <a class="btn btn-danger" (click)="closeChat()">Close</a>
         </div>
     </div>
   </div>
