--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -2,6 +2,8 @@
   <a class="navbar-brand" href="./chat">Chat application</a>
   <div class="navbar-nav mr-auto">
     <a class="nav-item nav-link" href="#">Clicks: {{ clickCount }}</a>
+    <a class="nav-item nav-link" href="#">Characters typed: {{ userChattingCharactersTyped.length }}</a>
+    <a class="nav-item nav-link" href="#">Chats opened: {{ userChattingCharactersTyped }}</a>
   </div>
   <div class="navbar-nav ms-auto">
     <a class="nav-item nav-link" href="#">{{ currentUser }}</a>
