--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,7 @@
-
+<div class="center">
+  <h1>Welcome to the chat application!</h1>
+  <p>Please <a href="/login">login</a> in order to chat with people all over the globe!</p>
+</div>
 <div>
   <div id="logincard" class="card mx-auto" style="width: 40rem">
     <div class="card-body">
