--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -38,6 +38,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ userDetails['firstName'] + ' ' + userDetails['lastName'] }}</h5>
           <h6 class="card-subtitle mb-2 text-muted">Birthdate: {{ userDetails['birthDate'] }}</h6>
+          <p>{{ userDetails.length }}</p>
           <p class="card-text">
             Eye color: {{ userDetails['eyeColor'] }}<br/>
             University: {{ userDetails['university'] }}<br/>
@@ -51,19 +52,21 @@
         </div>
       </div>
 
-      <div *ngIf="userDetails.length === 0"></div>
-        <div *ngFor="let chat of userChattingHistory">
-          <div class="card" style="width: 25rem;">
-            <div class="card-body">
-              <h5 class="card-title">{{ chat.activeUser }} messaged {{ chat.respondUser }}</h5>
-              <p class="card-text">Message: {{ chat.activeUserMessage }}<br>
-                Sent at: {{  chat.messageSentAt.getDate() + "." + (chat.messageSentAt.getMonth()+1) + '.' + (chat.messageSentAt.getFullYear()) + ' ' + chat.messageSentAt.getHours() + ':' + chat.messageSentAt.getMinutes() + ':' + chat.messageSentAt.getSeconds() }}<br>
-                Response: {{ chat.respondUserMessage }}<br>
-                Responded At: {{  chat.responseSentAt.getDate() + "." + (chat.responseSentAt.getMonth()+1) + '.' + (chat.responseSentAt.getFullYear()) + ' ' + chat.responseSentAt.getHours() + ':' + chat.responseSentAt.getMinutes() + ':' + chat.responseSentAt.getSeconds() }}
-              </p>
+      <div *ngIf="userDetails.length === 0">
+      <div *ngFor="let chat of userChattingHistory">
+        <div class="card" style="width: 25rem; text-align: center;">
+          <div class="card-body">
+            <h5 class="card-title">{{ chat.activeUser }} messaged {{ chat.respondUser }}</h5>
+            <p class="card-text">Message: {{ chat.activeUserMessage }}<br>
+              Sent at: {{  chat.messageSentAt.getDate() + "." + (chat.messageSentAt.getMonth()+1) + '.' + (chat.messageSentAt.getFullYear()) + ' ' + chat.messageSentAt.getHours() + ':' + chat.messageSentAt.getMinutes() + ':' + chat.messageSentAt.getSeconds() }}<br>
+              Response: {{ chat.respondUserMessage }}<br>
+              Responded At: {{  chat.responseSentAt.getDate() + "." + (chat.responseSentAt.getMonth()+1) + '.' + (chat.responseSentAt.getFullYear()) + ' ' + chat.responseSentAt.getHours() + ':' + chat.responseSentAt.getMinutes() + ':' + chat.responseSentAt.getSeconds() }}
+            </p>
           </div>
         </div>
       </div>
+      </div>
+
     </div>
     <div class="col">
       <div class="card" style="width: 30rem;" *ngIf="userChattingDetails.length !== 0">
