--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div *ngFor="let user of users">
-                    <div class="card" style="width: 20rem" (click)="interact(user)">
+                    <div class="card card-users" style="width: 20rem" (click)="interact(user)">
                         <div class="card-body">
                             <h5 class="card-title">{{ user.firstName + ' ' + user.lastName }}</h5>
                             <p class="card-text">Email: {{ user.email }}</p>
