--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="navbar-nav ms-auto">
     <a class="nav-item nav-link" href="#">{{ currentUser }}</a>
-    <a class="nav-item nav-link" href="#">Loggged at {{ userLoginTime }}</a>
+    <a class="nav-item nav-link" href="#">Loggged at {{ "a" }}</a>
     <a class="nav-item nav-link" href="/login" (click)="logOut()">Log out</a>
   </div>
 </nav>
