--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -80,7 +80,7 @@
                     </div>
                 </form>
                 <div *ngFor="let message of userChattingMessages">
-                    <div class="card text-bg-success p-3" style="width: 25rem; text-align: center; color: white">
+                    <div class="card text-bg-success p-3" style="width: 25rem; text-align: center; color: white; margin: 5%">
                         <h5 class="card-title">Message</h5>
                         <p class="card-text">You: {{ message }}
                             <br>{{ userChattingDetails['firstName'] + ' ' + userChattingDetails['lastName'] }}: {{ userChattingResponse[message] }}
