--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -56,7 +56,7 @@
             <div *ngFor="let chat of userChattingHistory">
                 <div class="card" style="width: 25rem; text-align: center; margin-bottom: 5%;">
                     <div class="card-body">
-                        <h5 class="card-title">{{ chat.activeUser }} messaged {{ chat.respondUser }}</h5>
+                        <h5 class="card-title">You messaged {{ chat.respondUser }}</h5>
                         <p class="card-text">Message: {{ chat.activeUserMessage }}<br>
                             Sent at: {{  chat.messageSentAt.getDate() + "." + (chat.messageSentAt.getMonth()+1) + '.' + (chat.messageSentAt.getFullYear()) + ' ' + chat.messageSentAt.getHours() + ':' + chat.messageSentAt.getMinutes() + ':' + chat.messageSentAt.getSeconds() }}<br>
                             Response: {{ chat.respondUserMessage }}<br>
