--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -83,7 +83,7 @@
                     <div class="card text-bg-success p-3" style="width: 25rem; text-align: center; color: white; margin: 5%">
                         <h5 class="card-title">Message</h5>
                         <p class="card-text">You: {{ message }}
-                            <br>{{ userChattingDetails['firstName'] + ' ' + userChattingDetails['lastName'] }}: {{ userChattingResponse[message] }}
+                            <br>{{ userChattingDetails['firstName'] + ' ' + userChattingDetails['lastName'] }}: {{ userChattingResponses[message] }}
                         </p>
                     </div>
                     <div>
