--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+
+<div *ngIf="!getLoginStatus()">
+  <div class="center">
+    <h1>Welcome to the chat application!</h1>
+    <p>Please <a href="/login">login</a> in order to chat with people all over the globe!</p>
+  </div>
+</div>
+
 <router-outlet></router-outlet>
