--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -38,14 +38,14 @@
             <div class="card-body">
                 <h5 class="card-title">{{ userDetails['firstName'] + ' ' + userDetails['lastName'] }}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Birthdate: {{ userDetails['birthDate'] }}</h6>
-                <p>{{ userDetails.length }}</p>
                 <p class="card-text">
+                    Username: {{ userDetails['username'] }}<br/>
                     Eye color: {{ userDetails['eyeColor'] }}<br/>
                     University: {{ userDetails['university'] }}<br/>
                     MAC Address: {{ userDetails['macAddress'] }}<br/>
                     IP Address: {{ userDetails['ip'] }}<br/>
                     Country: {{ userCountry }}<br/>
-                    City:{{ userDetails['city'] }}<br/>
+                    City: {{ userDetails['city'] }}<br/>
                     Gender: {{ userGender.charAt(0).toUpperCase() + userGender.slice(1) }}
                 </p>
                 <a class="btn btn-danger" (click)="closeUserDetails()">Close</a>
